<com.supersit.common.widget.MyLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CommonActivity"
    android:id="@+id/view_root">
    <include layout="@layout/view_include_toolbar"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                style="@style/CommonPadding_tbm_lrh"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_event_source"
                    android:drawablePadding="@dimen/spacing_l"
                    style="@style/CommonBoldText"
                    android:text="@string/event_source"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    style="@style/CommonGreyLightShape">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/CommonLightText"
                            android:text="@string/upload_user"/>
                        <TextView
                            android:id="@+id/tv_upload_user"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_h"
                            style="@style/CommonText"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_l"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/CommonLightText"
                            android:text="@string/upload_time"/>
                        <TextView
                            android:id="@+id/tv_upload_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_h"
                            style="@style/CommonText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_l"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/CommonLightText"
                            android:text="@string/affiliation_project"/>
                        <TextView
                            android:id="@+id/tv_affiliation_project"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_h"
                            style="@style/CommonText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_l"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/CommonLightText"
                            android:text="@string/upload_address"/>
                        <TextView
                            android:id="@+id/tv_upload_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_h"
                            style="@style/CommonText"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_event_title"
                    android:drawablePadding="@dimen/spacing_l"
                    style="@style/CommonBoldText"
                    android:layout_marginTop="@dimen/spacing_m"
                    android:text="@string/event_title"/>
                <TextView
                    android:id="@+id/tv_event_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CommonGreyLightShape"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_event_remark"
                    android:drawablePadding="@dimen/spacing_l"
                    style="@style/CommonBoldText"
                    android:layout_marginTop="@dimen/spacing_m"
                    android:text="@string/event_remark"/>
                <TextView
                    android:id="@+id/tv_event_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CommonGreyLightShape"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_pictures"
                    android:drawablePadding="@dimen/spacing_l"
                    style="@style/CommonBoldText"
                    android:layout_marginTop="@dimen/spacing_m"
                    android:text="@string/scene_pictures"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_scene_pictures"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_handle_situation"
                    android:drawablePadding="@dimen/spacing_l"
                    style="@style/CommonBoldText"
                    android:layout_marginTop="@dimen/spacing_m"
                    android:text="@string/handle_situation"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_event_handle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_m"
                    android:orientation="horizontal"
                    android:gravity="right">
                    <Button
                        android:id="@+id/btn_edit_suggest"
                        style="@style/CommonButton"
                        android:drawableLeft="@mipmap/ic_edit_suggest"
                        android:drawablePadding="@dimen/spacing_l"
                        android:text="@string/edit_suggest"/>
                    <Button
                        android:id="@+id/btn_event_end"
                        android:drawableLeft="@mipmap/ic_event_end"
                        android:drawablePadding="@dimen/spacing_l"
                        style="@style/CommonButton"
                        android:layout_marginLeft="@dimen/spacing_m"
                        android:text="@string/end"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
</com.supersit.common.widget.MyLinearLayout>
