<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CommonGreyLightShape"
    android:orientation="vertical">
   <TextView
       android:id="@+id/tv_title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/text_size_h"
       android:textColor="@color/blue"
       android:text="1.事件来源"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_m"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CommonText"
            android:text="@string/upload_user"/>
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/spacing_h"
            style="@style/CommonLightText"
            android:text="曾亮(13578944687)"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        android:layout_marginLeft="@dimen/spacing_m"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CommonText"
            android:text="@string/time"/>
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/spacing_h"
            style="@style/CommonLightText"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_handle_suggest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        android:layout_marginLeft="@dimen/spacing_m"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CommonText"
            android:text="@string/handle_suggest"/>
        <TextView
            android:id="@+id/tv_handle_suggest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/spacing_h"
            style="@style/CommonLightText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        android:layout_marginLeft="@dimen/spacing_m"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CommonText"
            android:text="@string/handle"/>
        <TextView
            android:id="@+id/tv_handle_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/spacing_h"
            style="@style/CommonLightText"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_next_receiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        android:layout_marginLeft="@dimen/spacing_m"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CommonText"
            android:text="@string/next_receiver"/>
        <TextView
            android:id="@+id/tv_next_receiver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/spacing_h"
            style="@style/CommonLightText"
            android:text="田皓午(13654678354)"/>
    </LinearLayout>
</LinearLayout>

