<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:scrollbars="none">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        style="@style/CommonPadding_tbl_lrm">
        <EditText
            android:id="@+id/et_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_m"
            android:background="@null"
            style="@style/CommonText"
            android:hint="@string/edit_suggest"
            android:gravity="left|top"
            android:lines="4"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_l"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_add_user_focused"/>
            <EditText
                android:id="@+id/et_select_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_shape_bg"
                android:padding="@dimen/spacing_l"
                android:focusable="false"
                android:hint="@string/select_next_receiver"
                style="@style/CommonSmallText"/>
            <TextView
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_m"
                android:layout_gravity="right"
                style="@style/CommonPadding_tbm_lrh"
                android:background="@drawable/btn_shape"
                android:textSize="@dimen/text_size_m"
                android:textColor="@color/white"
                android:text="@string/send"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
